--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,24 @@
 
 h1 {
-    font-family: Tahoma, Geneva, Verdana, sans-serif;
-    color: darkmagenta;
-    font-size: 4em;
+    font-family: "Open Sans", Lora, serif;
+    color: white;
+    font-size: 5em;
+    font-weight: 700;
 }
 
 .purplebar {
-    border: 5px solid darkmagenta;
+    background: linear-gradient(90deg, rgba(83,45,143,1) 0%, rgba(83,45,143,1) 25%, rgba(98,74,207,1) 100%);
+    border: 0px;
+    height: 10px;
     border-radius: 5px;
+}
+
+.header {
+    background: linear-gradient(90deg, rgba(83,45,143,1) 0%, rgba(83,45,143,1) 25%, rgba(98,74,207,1) 100%);
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 100%;
+    overflow-x: hidden;
 }
