--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,24 +1,75 @@
 
+body {
+  margin: 0px;
+}
+
 h1 {
-    font-family: "Open Sans", Lora, serif;
-    color: white;
-    font-size: 5em;
-    font-weight: 700;
+  font-family: "Open Sans", Lora, serif;
+  color: white;
+  font-size: 5em;
+  font-weight: 700;
 }
 
 .purplebar {
-    background: linear-gradient(90deg, rgba(83,45,143,1) 0%, rgba(83,45,143,1) 25%, rgba(98,74,207,1) 100%);
-    border: 0px;
-    height: 10px;
-    border-radius: 5px;
+  background: linear-gradient(90deg, rgba(83,45,143,1) 0%, rgba(83,45,143,1) 25%, rgba(98,74,207,1) 100%);
+  border: 0px;
+  height: 10px;
+  border-radius: 5px;
 }
 
 .header {
-    background: linear-gradient(90deg, rgba(83,45,143,1) 0%, rgba(83,45,143,1) 25%, rgba(98,74,207,1) 100%);
-    padding-left: 0px;
-    padding-right: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    width: 100%;
-    overflow-x: hidden;
+  background: linear-gradient(90deg, rgba(83,45,143,1) 0%, rgba(83,45,143,1) 25%, rgba(98,74,207,1) 100%);
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+  overflow-x: hidden;
+  width: 100%;
+  left: 0px;
+}
+
+.navbar {
+  background: linear-gradient(90deg, rgba(83,45,143,1) 0%, rgba(83,45,143,1) 25%, rgba(98,74,207,1) 100%);
+  left: 0px;
+}
+
+.navbar.horizontal {
+  font-weight: bold;
+  font-size: 1.25em;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.horlist {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  margin-left: 10px;
+}
+
+a:link {
+  color: white;
+  padding: 8px;
+  text-decoration: none;
+  
+}
+  
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: rgb(144, 219, 241);
+}
+
+a:active {
+  text-decoration: underline;
 }
