--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -6,15 +6,21 @@ body {
 li.navbar {
     font-size: 3em;
     font-weight: 400;
+    height: 100%;
     float: left;
-    padding: 0px 10px;
+    padding: 0px 20px 0px 10px;
+}
+
+.dropdown {
+    height: auto;
+    width: 75px;
 }
 
 #heading {
     width: 100%;
     height: 75px;
     background-color: #553198;
-    padding: 5px 225px;
+    padding: 5px 0px;
     color: white;
     display: inline-block;
 }
@@ -36,4 +42,15 @@ li.navbar {
     border-width: 0px;
     background-color: white;
 }
-  
+
+#barmenu {
+    object-fit: scale-down;
+    padding: 0px;
+    margin: 0px;
+    width: 50%;
+    height: 50%;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+
+}
