--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -8,12 +8,16 @@ li.navbar {
     font-weight: 400;
     height: 100%;
     float: left;
+    display: flex;
     padding: 0px 20px 0px 10px;
 }
 
 .dropdown {
-    height: auto;
+    height: 100%;
     width: 75px;
+    text-align: center;
+    display: flex;
+    align-items: center;
 }
 
 #heading {
@@ -23,6 +27,10 @@ li.navbar {
     padding: 5px 0px;
     color: white;
     display: inline-block;
+}
+
+#container {
+    display: flex;
 }
 
 #heading_nav_bar {
@@ -44,13 +52,7 @@ li.navbar {
 }
 
 #barmenu {
-    object-fit: scale-down;
-    padding: 0px;
-    margin: 0px;
-    width: 50%;
-    height: 50%;
-    position: relative;
-    justify-content: center;
-    align-items: center;
+    width: 55%;
+    height: 55%;
 
 }
