--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -4,20 +4,25 @@ body {
 }
 
 li.navbar {
-    font-size: 3em;
     font-weight: 400;
     height: 100%;
     float: left;
     display: flex;
-    padding: 0px 20px 0px 10px;
 }
 
-.dropdown {
+li.photo_container {
+    padding: 0px 5px 0px 0px;
+    width: 8%;
+}
+
+div.dropdown {
     height: 100%;
     width: 75px;
     text-align: center;
-    display: flex;
     align-items: center;
+    display: inline-flex;
+    margin-left: auto;
+    margin-right: 0;
 }
 
 #heading {
@@ -25,30 +30,44 @@ li.navbar {
     height: 75px;
     background-color: #553198;
     padding: 5px 0px;
-    color: white;
     display: inline-block;
 }
 
 #container {
     display: flex;
+    padding-left: 15%;
+    width: 75%;
+    height: 100%;
 }
 
 #heading_nav_bar {
     padding: 0px;
     margin: 0px;
-    display: inline;
+    width: 100%;
+    display: inline-block;
     overflow: hidden;
     list-style: none;
 }
 
+#title_text {
+    color: white;
+    width:auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #icon_photo {
     padding: 0px;
-    width: 70px;
-    height: 70px;
+    width: 100%;
+    height: 100%;
     object-fit:scale-down;
     border-radius: 50%;
     border-width: 0px;
     background-color: white;
+    object-fit: cover;
+    width: 75px;
+    height: 75px;
 }
 
 #barmenu {
